job_metadata_manager/job_metadata_manager_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-metadata-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-metadata-manager
  template:
    metadata:
      labels:
        app: job-metadata-manager
    spec:
      containers:
        - name: job-metadata-manager
          image: quay.io/genai-workload-manager/job_metadata_manager
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: fms-tuning-pvc
