job_metadata_manager/job_metadata_manager_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-metadata-manager-service
spec:
  selector:
    app: job-metadata-manager
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
