job_metadata_manager/job_metadata_manager_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: job-metadata-manager-route
spec:
  to:
    kind: Service
    name: job-metadata-manager-service
  port:
    targetPort: 5000
  tls:
    termination: edge
